public/css/general.css
body {
    font-family: 'Poppins', sans-serif;
    min-height: 100vh;
    display: grid;
    grid-template-rows: auto 1fr auto;
}

header {
    margin-bottom: 2rem;
}

main {
    max-width: 1400px;
    width: 90vw;
    margin: 0 auto;
}

footer {
    margin-top: 2rem;
    padding: 1rem;
    background-color: #e8e8e8;
    display: grid;
    grid-template-rows: 1fr 1fr 1fr;
    text-align: center;
}

@media screen and (min-width: 1050px) {
    footer {
        grid-template-columns: 1fr 1fr 1fr;
        grid-template-rows: none;
    }
}

a {
    text-decoration: none;
}

h1 {
    font-size: 2rem;
    margin-top: 0.5rem;
}

h2 {
    font-size: 1.5rem;
    margin-top: 2rem;
}

hr {
    margin: 0 0 0.7rem 0;
}

.no-events {
    font-size: 1.3rem;
    text-align: center;
    margin: 2rem;
}

/* Tables */
.table-danger {
    --bs-table-striped-color: #721c24;
    color: #721c24;
}

table td ul {
    list-style-type: none;
    padding: 0.2rem 0.5rem;
    margin-bottom: 0.2rem;
}

table td ul span.title {
    display: inline-block;
    min-width: 110px;
}

table td.date {
    min-width: 125px;
}

.near-deadline {
    color: #ff4010;
}
/* End - Tables */

/* Pagination */
.navigation ul {
    justify-content: center !important;
}

@media screen and (max-width: 425px) {
    .navigation ul {
        font-size: small;
    }
}
/* End - Pagination */

